<resources>
    <string name="app_name">Remind me</string>
    <string name="schedule_the_dose">Schedule The Dose</string>
    <string name="pills_name">Pills Name</string>
    <string name="amount">Amount</string>
    <string name="dose">Dose</string>
    <string name="frequency">Frequency</string>
    <string name="remainder">Remainder</string>
    <string name="in_case_you_missed_your_dose">In case You missed Your Dose</string>
    <string name="phone">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="spray">Spray</string>
    <string name="capsule">Capsule</string>
    <string name="injection">Injection</string>
    <string name="appearance">Appearance</string>
    <string name="tablets">Tablets</string>
    <string name="to_take">To take</string>
    <string name="add_button">Add button</string>
</resources>