<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.graps.remindme.ui.inTake.IntakeViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/intake_background">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/podkova_extra_bold"
            android:text="@string/schedule_the_dose"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/pills_name"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/pillsName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_capsule"
            android:fontFamily="@font/podkova_regular"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl1"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="SpeakableTextPresentCheck"
            android:text="@={viewModel.pillsName}"/>


        <TextView
            android:id="@+id/lbl2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/amount"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/pillsName" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_capsule"
            android:fontFamily="@font/podkova_regular"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/lbl2"
            app:layout_constraintTop_toBottomOf="@+id/lbl2"
            app:layout_constraintWidth_percent="0.43"
            android:text="@={`` + viewModel.amount}"
            />

        <TextView
            android:id="@+id/lbl3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/dose"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/dose"
            app:layout_constraintTop_toTopOf="@+id/lbl2" />

        <EditText
            android:id="@+id/dose"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_capsule"
            android:fontFamily="@font/podkova_regular"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/lbl2"
            app:layout_constraintWidth_percent="0.43"
            android:text="@={viewModel.dose}"/>


        <TextView
            android:id="@+id/lbl4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/frequency"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/amount" />

        <EditText
            android:id="@+id/frequency"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_calender"
            android:fontFamily="@font/podkova_regular"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl4"
            app:layout_constraintWidth_percent="0.9"
            android:text="@={viewModel.frequency}"/>


        <TextView
            android:id="@+id/lbl5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/remainder"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/frequency" />

        <EditText
            android:id="@+id/reminder"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_notification"
            android:fontFamily="@font/podkova_regular"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="@+id/frequency"
            app:layout_constraintTop_toBottomOf="@+id/lbl5"
            app:layout_constraintWidth_percent="0.75"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/date_picker_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="+"
            android:textSize="@dimen/txt4"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/frequency"
            app:layout_constraintTop_toTopOf="@+id/reminder"
            android:background="@drawable/rounded_corner_btn"/>

        <TextView
            android:id="@+id/lbl6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/phone"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/reminder" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            style="@style/editTextStyle"
            android:drawableStart="@drawable/ic_phone"
            android:fontFamily="@font/podkova_regular"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl6"
            app:layout_constraintWidth_percent="0.9"
            android:text="@={viewModel.phoneNo}"/>

        <TextView
            android:id="@+id/lbl7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/in_case_you_missed_your_dose"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/lbl8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/appearance"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/txt4"
            app:layout_constraintStart_toStartOf="@+id/pillsName"
            app:layout_constraintTop_toBottomOf="@+id/lbl7" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_appearance"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            app:items="@{viewModel.appearanceList.appearanceList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl8"
            tools:listitem="@layout/item_appearance">

        </androidx.recyclerview.widget.RecyclerView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/rounded_corner_btn"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/phone"
            app:layout_constraintStart_toStartOf="@+id/phone" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:srcCompat="@drawable/ic_arrow" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>